--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,6 +2,7 @@
     "files.associations": {
         "abstract-syntax-tree.h": "c",
         "generator.h": "c",
-        "shared.h": "c"
+        "shared.h": "c",
+        "string.h": "c"
     }
 }
